complete the be code for post, like and comment
